@@ -35,7 +35,10 @@ class Debug:
     defaultPrinter = sys.stderr.write
     def __init__(self, *flags):
         self._flags = flagNone
-        self._printer = self.defaultPrinter
+        if self.defaultPrinter:
+            self._printer = self.defaultPrinter
+        else:
+            self._printer = lambda x: None  # stderr may not be available
         self('running pysnmp version %s' % __version__)
         for f in flags:
             inverse = f and f[0] in ('!', '~')
