@@ -39,6 +39,7 @@ Revision 4.2.6rc0
   reworked towards more robust and simple design with the execution observer
   facility.
 - MIB instrumentation example improved to cover table index building facility.
+- Handle the case of absent stderr stream at Debug printer.
 - Fix to decodeMessageVersion() to withstand broken SNMP messages.
 - Fix to rfc1902.Bits type to make it accepting hex and binary initializers,
   cope with missing bits identifieirs at prettyPrint().
